# scheduled_relatories

./: Doc.md  pyproject.toml
02.Ogochi/Base_ativa/: envio_email.py  notificador_chat.py  query.py  salvar.py  script.py
27.Heineken/: cnpjs.csv  config.py  config_olos.py  dados.csv  dados_enviados_para_consulta.csv  ler_excel.py  pyproject.toml  querys_heineken.py  script.py
27.Heineken/old/: cnpjs_titulos_parcelas.csv  dados.csv  dados_enviados_para_consulta.csv  database_olos.py  df1.csv  heineken.py  heineken2.py  ler_excel.py  ler_excel_opcional.py  pyproject.toml  query_old.py  query_olos.py  querys_heineken.py  querys_heineken2.py  querys_heineken3.py  querys_heineken_cnpj.py  querys_heineken_opcional.py  salvar.py  script.py  script_opcional.py
35.Fortlev/Base_ativa_recebidos/: database.py  envio_email.py  query.py  salvar_fortlev.py  script.py
Dashboards_B2B/: Home.py  pyproject.toml  start_dashboard.sh  start_grandes.sh  start_unidades.sh  stop_dashboard.sh  stop_grandes.sh  stop_unidades.sh  ultima_atualizacao_grandes.txt  ultima_atualizacao_unidades.txt
Dashboards_B2B/data/: acion_esta_semana_unidades.csv  acion_semana_passada_unidades.csv  esta_semana_grandes.csv  esta_semana_unidades.csv  previsao_hoje_grandes.csv  previsao_hoje_unidades.csv  previsao_inicial_grandes.csv  previsao_inicial_unidades.csv  semana_passada_grandes.csv  semana_passada_unidades.csv
Dashboards_B2B/pages/: 2_Unidades_e_Supervisores.py  3_Grandes_Carteiras.py
Dashboards_B2B/processing/: data_processing_grandes.py  data_processing_unidades.py  static_table_grandes.py  static_table_unidades.py
Dashboards_B2B/querys/: querys_grandes.py  querys_unidades.py  scheduler_grandes.py  scheduler_unidades.py
Envio_emails/: credenciais_email  funcao_enviar_email.py  script_email.py
Meta_ML/: dados_maio_pagamento.csv  dados_receita_julho.csv  dados_receita_julho_DU.csv  metas_rf.py  metas_rf_pagamento.py  prev_julho_DU.csv  previsao_julho.csv  previsao_julho_maijun.csv  previsao_julho_pagamento.csv  pyproject.toml  query.py  query_DU.py  script.py
