[tool.poetry]
name = "relatorios-agendados"
version = "0.1.0"
description = ""
authors = ["Tulio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.1"
pyodbc = "^5.2.0"
dotenv = "^0.9.9"
openpyxl = "^3.1.5"
sqlalchemy = "^2.0.41"
python-dateutil = "^2.9.0.post0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
