[tool.poetry]
name = "dashboards-b2b"
version = "0.1.0"
description = ""
authors = ["Tulio"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
imgkit = "^1.2.3"
matplotlib = "^3.10.3"
schedule = "^1.2.2"
xlsxwriter = "^3.2.5"
plotly = "^6.2.0"
pyodbc = "^5.2.0"
pyinstaller = "^6.14.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.41"
pandas = "^2.3.1"
streamlit = "^1.46.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
